manifests/depart/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: depart-api
  labels:
    app: depart-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: depart-api
  template:
    metadata:
      labels:
        app: depart-api
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: api
          image: ghcr.io/x-real-ip/depart-api:latest
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: api
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 320Mi
          volumeMounts:
            - name: documents
              mountPath: /data/documents
      volumes:
        - name: documents
          persistentVolumeClaim:
            claimName: pvc-iscsi-depart-documents

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: depart-web
  labels:
    app: depart-web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: depart-web
  template:
    metadata:
      labels:
        app: depart-web
    spec:
      containers:
        - name: web
          image: ghcr.io/x-real-ip/depart-web:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
